--- a/materials/04-static-documents.qmd
+++ b/materials/04-static-documents.qmd
@@ -92,14 +92,10 @@ or
 toc-depth: 2
 ```
 
-. . .
-
-<iframe src = "https://rstudio-conf-2022.github.io/get-started-quarto/materials/static/toc-1.html" height="500" width="1200" ></iframe>
-
 
 ## Table of Contents and Section
 
-<iframe src="https://rstudio-conf-2022.github.io/get-started-quarto/#getting-started-with-quarto" width="1300px" height="900px"></iframe>
+<https://jthomasmock.github.io/quarto-r-medicine/>
 
 
 ## Tabsets
@@ -383,23 +379,19 @@ format:
 
 ## Bootswatch themes
 
-<iframe src="https://bootswatch.com/" height="900" width="1200"></iframe>
+::: {.r-stack .fragment}
 
-## Bootswatch: lumen
+![](images/bootswatch.png)
 
-<iframe src="https://bootswatch.com/lumen/" height="900" width="1200"></iframe>
+![](images/flatly.png)
 
-## Bootswatch: litera
+![](images/lumen.png)
 
-<iframe src="https://bootswatch.com/litera/" height="900" width="1200"></iframe>
+![](images/litera.png)
 
-## Bootswatch: flatly
+![](images/sketchy.png)
 
-<iframe src="https://bootswatch.com/flatly/" height="900" width="1200"></iframe>
-
-## Bootswatch: sketchy
-
-<iframe src="https://bootswatch.com/sketchy/" height="900" width="1200"></iframe>
+:::
 
 # `r fontawesome::fa("laptop-code", "white")` Your Turn {background-color="#447099" transition="slide-in"}
 
@@ -558,7 +550,7 @@ $primary_3: #878f99;
 
 ## SASS variables + Quarto
 
-<iframe src="https://quarto.org/docs/output-formats/html-themes.html#sass-variables" height="800" width="1200" ></iframe>
+<https://quarto.org/docs/output-formats/html-themes.html#sass-variables>
 
 ## `format: PDF`
 
@@ -571,3 +563,68 @@ TIP!
 
 - Open `quarto-workshop/01-intro/history.qmd`
 - Render as HTML and then render as PDF
+
+## Journal Articles
+
+<https://quarto.org/docs/journals/>
+
+. . .
+
+The Quarto team has developed several Journal formats and made them available within the quarto-journals GitHub organization. These formats include:
+
+- ACM  
+- PLOS  
+- Elsevier  
+- ACS  
+- JSS  
+
+Many more formats will be added over time and we welcome proposals from the community for contributed formats (please post an issue at https://github.com/quarto-journals/article-format-template/issues if you are interested in contributing a format).
+
+## Quarto, crafted with love and care
+
+> Development of Quarto is sponsored by RStudio, PBC. The same core team works on both Quarto and R Markdown:
+
+-   Carlos Scheidegger ([\@cscheid](https://github.com/cscheid))
+
+-   Charles Teague ([\@dragonstyle](https://github.com/dragonstyle))
+
+-   Christophe Dervieux ([\@cderv](https://github.com/cderv))
+
+-   J.J. Allaire ([\@jjallaire](https://github.com/jjallaire/))
+
+-   Yihui Xie ([\@yihui](https://github.com/yihui))
+
+Here is the [full contributors list](https://github.com/quarto-dev/quarto-cli/graphs/contributors). Quarto is open source and we welcome contributions in our github repository as well! <https://github.com/quarto-dev/quarto-cli>.
+
+## Quarto
+
+- Batteries included, shared syntax across output types and languages
+- Choose your own editor and your preferred data science language
+- RMarkdown still maintained, but majority of new features built into Quarto
+
+Follow [\@quarto_pub](https://twitter.com/quarto_pub) or me [\@thomas_mock](https://twitter.com/thomas_mock) on Twitter to stay up to date!
+
+- Webinar Slides: <https://jthomasmock.github.io/quarto-2hr-webinar/>
+- FULL workshop materials: [rstd.io/get-started-quarto](https://rstd.io/get-started-quarto)
+- Workshop materials on RStudio Cloud:<https://rstudio.cloud/content/4332583>
+
+. . .
+
+### Web resources
+
+-   [Quarto.org](https://quarto.org/) for documentation or the [Quarto FAQ](https://quarto.org/docs/faq/)
+-   ["With Quarto Coming, is R Markdown Going Away? No." - Yihui.org](https://yihui.org/en/2022/04/quarto-r-markdown/)
+
+## Why the name "Quarto"?[^1]
+
+[^1]: [Why Quarto?](https://quarto.org/docs/faq/#why-the-name-quarto) We wanted to use a name that had meaning in the history of publishing and landed on Quarto, which is the format of a book or pamphlet produced from full sheets printed with eight pages of text, four to a side, then folded twice to produce four leaves. The earliest known European printed book is a Quarto, the [Sibyllenbuch](https://en.wikipedia.org/wiki/Sibyllenbuch_fragment), believed to have been printed by [Johannes Gutenberg](https://en.wikipedia.org/wiki/Johannes_Gutenberg) in 1452–53.
+
+::: columns
+::: {.column width="50%"}
+![](images/quarto-hamlet-1.jpeg){alt-text="A quarto folded book, where each of the pages can be folded to align the text." width="450px"}
+:::
+
+::: {.column width="50%"}
+![](images/quarto-hamlet-2.jpeg){alt-text="A quarto folded book, where each of the pages can be folded to align the text." width="450px"}
+:::
+:::
